--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,4 @@ build-backend="setuptools.build_meta"
 
 [tool.setuptools_scm]
 write_to = "src/python/monochrome/_version.py"
+fallback_version = "0.1"
