Don't show terminal on windows, WIN32 main function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,8 +116,9 @@ if(APPLE AND NOT SKBUILD)
     set(myApp_ICON ${PROJECT_SOURCE_DIR}/vendor/MultiRecorderVideo.icns)
     set_source_files_properties(${myApp_ICON} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
     add_executable(Monochrome MACOSX_BUNDLE ${myApp_ICON} ${SOURCES})
-elseif(MSVC)
-    add_executable(Monochrome ${SOURCES} ${PROJECT_SOURCE_DIR}/vendor/Monochrome.rc)
+elseif(MSVC AND NOT SKBUILD)
+    add_executable(Monochrome WIN32 ${SOURCES} ${PROJECT_SOURCE_DIR}/vendor/Monochrome.rc)
+    target_compile_definitions(Monochrome PRIVATE USE_WIN32_MAIN)
 else()
     add_executable(Monochrome ${SOURCES})
 endif()
