--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,10 +16,6 @@ stages:
     paths:
       - .ccache
 
-.vs_generator: &vs_generator
-  CMAKE_GENERATOR: 'Visual Studio 16 2019'
-  CMAKE_GENERATOR_PLATFORM: 'x64'
-
 .build_make: &build_make
   script:
     - JOB_NAME=( $CI_JOB_NAME )
@@ -133,14 +129,18 @@ macos:
 #  after_script:
 #    - otool -l build/Release/monochrome | grep -A 3 LC_VERSION_MIN_MACOSX
 
-#windows Release:
-#  <<: [*windows, *build_config_generator]
-#  variables:
-#    <<: *vs_generator
-#  artifacts:
-#    paths:
-#      - build/Release/Monochrome.exe
-#    expire_in: 3 months
+windows Release:
+  stage: build
+  tags:
+    - windows
+  script:
+    - cmake -Bbuild -G "Visual Studio 17 2022" -DCMAKE_GENERATOR_PLATFORM="x64" -Wdev .
+    - cd build
+    - cmake --build . --config "Release" --parallel 12
+  artifacts:
+    paths:
+      - build/Release/Monochrome.exe
+    expire_in: 3 months
 
 pytest:
   stage: test
