Simplify key bindings with better defaults, bugfixes
See `README.md` for list of key bindings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,8 @@ set(SOURCES
         src/cpp/recordingwindow_helpers.h
         src/cpp/transformations.cpp
         src/cpp/transformations.h
+        src/cpp/keybindings.cpp
+        src/cpp/keybindings.h
 
         src/cpp/fileformats/AbstractFile.h
         src/cpp/fileformats/all_formats.cpp
