--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ build-backend="setuptools.build_meta"
 write_to = "src/python/monochrome/_version.py"
 fallback_version = "0.1"
 
+[tool.pytest.ini_options]
+testpaths = "src/python/tests"
+
 [tool.cibuildwheel]
 archs = ["auto64"]  # 64-bit only
 skip = "pp* *musllinux*"  # disable PyPy, musl-based wheels
@@ -22,7 +25,7 @@ before-build = "python -m pip install wheel>=0.40.0"
 
 [tool.cibuildwheel.macos]
 # https://cibuildwheel.readthedocs.io/en/stable/faq/#apple-silicon
-archs = ["x86_64", "universal2"]
+archs = ["universal2"]
 test-skip = ["*_arm64", "*_universal2:arm64"]
 repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} && wheel tags --python-tag=py3 --abi-tag=none --remove {dest_dir}/*.whl"
 
