--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -33,6 +33,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ["3.7", "3.12"]
 
     steps:
       - name: Checkout
@@ -45,9 +46,9 @@ jobs:
           path: dist
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.12
+          python-version: ${{ matrix.python-version }}
 
       - name: Install Pytest
         run: python -m pip install pytest
