--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -4,7 +4,7 @@ on:
     push:
 
 jobs:
-  Build-Python-Wheels:
+  build_python_wheels:
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.16.5
@@ -26,10 +28,10 @@ jobs:
           name: python-wheels-${{ runner.os }}
           path: ./wheelhouse/*.whl
 
-  Test-Python-Wheels:
-    name: Run tests on ${{ matrix.os }}
+  test_python_wheels:
+    name: Python ${{ matrix.python-version }} tests on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
-    needs: [Build-Python-Wheels]
+    needs: [build_python_wheels]
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -68,7 +70,8 @@ jobs:
         run: |
           python -m pytest
 
-  Linux-AppImage:
+  standalone_linux:
+    name: Build standalone on Linux
     runs-on: ubuntu-latest
     container:
       image: quay.io/pypa/manylinux2014_x86_64
@@ -79,6 +82,13 @@ jobs:
 
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    # Workaround for https://github.com/actions/runner/issues/2033
+    - name: Fix git safe.directory
+      run: |
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
 
     - name: Configure and build
       run: |
@@ -99,11 +109,14 @@ jobs:
         name: linux-standalone
         path: build/Monochrome.AppImage
 
-  Windows-Standalone:
+  standalone_windows:
+    name: Build standalone on Windows
     runs-on: windows-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Configure and build
       run: |
@@ -124,12 +137,15 @@ jobs:
         name: windows-standalone
         path: dist/*.zip
 
-  macOS-Standalone:
+  standalone_macos:
+    name: Build standalone on macOS
     runs-on: macos-12
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Configure and build
       run: |
