--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,12 +129,17 @@ jobs:
         cd build
         cmake --build . --config "Release" --parallel 4
 
+    # - name: Package
+    #   run: |
+    #     cd build
+    #     cpack -G ZIP
+    #     mkdir -p ../dist
+    #     mv Monochrome-*.zip ../dist
+
     - name: Package
       run: |
-        cd build
-        cpack -G ZIP
-        mkdir -p ../dist
-        mv Monochrome-*.zip ../dist
+        mkdir dist
+        cp build/Release/Monochome.exe dist
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
